clusters/develop/workloads/api/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexora-api
spec:
  template:
    spec:
      containers:
        - name: api
